--- a/app/templates/components/footer-stomach.hbs
+++ b/app/templates/components/footer-stomach.hbs
@@ -1,6 +1,8 @@
 <footer>
   <small>&copy;2018 Amber Johnson</small>
-  <a href="https://www.github.com/amberjohnsonsmile">GitHub</a>
-  <a href="https://www.linkedin.com/in/amberjohnsonsmile">LinkedIn</a>
-  <a href="mailto:amberjohnsonsmile@gmail.com">Email</a>
+  <div>
+    <a href="https://www.github.com/amberjohnsonsmile">GitHub</a>
+    <a href="https://www.linkedin.com/in/amberjohnsonsmile">LinkedIn</a>
+    <a href="mailto:amberjohnsonsmile@gmail.com">Email</a>
+  </div>
 </footer>
