--- a/app/templates/components/header-stomach.hbs
+++ b/app/templates/components/header-stomach.hbs
@@ -1,8 +1,8 @@
 <nav>
   <div>
-    <a>HOME</a>
-    <a>ABOUT</a>
-    <a>ADD YOUR OWN</a>
+    <a href='/'>HOME</a>
+    <a href='/about'>ABOUT</a>
+    <a href='/add'>ADD YOUR OWN</a>
   </div>
   <h1>Harry Potter and the Sorcerer's Stomach</h1>
 </nav>
