--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,2 +1,6 @@
 {{header-stomach}}
+<main>
+  <p>a collection of real and fake quotes on the theme of Harry Potter's stomach</p>
+  {{quote-stomach}}
+</main>
 {{footer-stomach}}
