--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,11 +1,13 @@
 @import "reset.css";
 @import url('https://fonts.googleapis.com/css?family=Tangerine|Lato');
 
+/* Main page */
+
 html {
   height: 100vh;
   box-sizing: border-box;
   font-family: Lato, sans-serif;
-  background: url('https://images.unsplash.com/photo-1502476698613-931a9afd2488') no-repeat;
+  background: url('https://images.unsplash.com/photo-1502476698613-931a9afd2488') no-repeat fixed;
   background-size: cover;
 }
 
@@ -16,6 +18,7 @@ nav {
   justify-content: space-between;
   padding: 0 1rem;
   background: rgba(255, 255, 255, .5);
+  position: sticky;
 }
 
 nav a {
@@ -83,10 +86,69 @@ footer {
   align-items: center;
   padding: 0 1rem;
   background: rgba(255, 255, 255, .5);
+  position: sticky;
 }
 
 footer a {
   padding-left: 1rem;
   text-decoration: none;
   color: black;
+}
+
+/* Add page */
+
+.add-quote {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  padding: 0 20%;
+}
+
+h2 {
+  font-size: 2rem;
+  padding-top: 3rem;
+  text-transform: uppercase;
+  color: white;
+}
+
+label {
+  padding: 2rem 0 1rem 0;
+  font-size: 1.5rem;
+  text-align: left;
+}
+
+textarea, input {
+  width: 100%;
+}
+
+textarea, #name {
+  padding: 1rem;
+  font-family: Lato, sans-serif;
+}
+
+textarea {
+  height: 7rem;
+  font-size: 1.5rem;
+}
+
+#name {
+  height: 2rem;
+  font-size: 1.5rem;
+}
+
+#submit-quote {
+  margin-top: 1rem;
+  width: 101%;
+  height: 4rem;
+  color: rgba(255, 255, 255, 0.8);
+  border: 3px solid rgba(255, 255, 255, 0.8);
+  background: rgba(0, 0, 0, 0.5);
+  text-transform: uppercase;
+  letter-spacing: .4rem;
+  font-size: 1rem;
+}
+
+#submit-quote:hover {
+  background: rgba(0, 0, 0, 0.7);
 }
