--- a/app/templates/add.hbs
+++ b/app/templates/add.hbs
@@ -1,5 +1,5 @@
-<h2>Add A Quote</h2>
-<form class="add-quote" method="POST">
+<h2 class="add">Add A Quote</h2>
+<form class="add-quote">
   <label for="quote">Type in your own quote about Harry Potter's stomach</label>
   <textarea id="quote"></textarea>
   <label for="name">Who is submitting this quote?</label>
