--- a/app/templates/components/add-stomach.hbs
+++ b/app/templates/components/add-stomach.hbs
@@ -1,1 +1,8 @@
-{{yield}}
+<h2 class="add">Add A Quote</h2>
+<form class="add-quote">
+  <label for="quote">Type in your own quote about Harry Potter's stomach</label>
+  <textarea id="quote"></textarea>
+  <label for="name">Who is submitting this quote?</label>
+  <input type="text" id="name">
+  <input id="submit-quote" type="submit" value="SUBMIT">
+</form>
