--- a/app/templates/components/header-stomach.hbs
+++ b/app/templates/components/header-stomach.hbs
@@ -1,7 +1,9 @@
 <nav>
   <div>
-    <a href='/'>HOME</a>
-    <a href='/add'>ADD YOUR OWN</a>
+    <a href='/'>QUOTES</a>
+    <a href='/random'>RANDOM</a>
+    <a href='/favorites'>FAVES</a>
+    <a href='/add'>ADD</a>
     <a href='/donate'>DONATE</a>
   </div>
   <h1>Harry Potter and the Sorcerer's Stomach</h1>
