Install Ember Data

--- a/app/templates/components/quote-stomach.hbs
+++ b/app/templates/components/quote-stomach.hbs
@@ -1,7 +1,4 @@
-<form>
-  <button action="submit">generate</button>
-</form>
-<div class="quote hidden">
-  <q>"Harry and Dudley promptly had a furious but silent fight over who would listen at the keyhole; Dudley won, so Harry, his glasses dangling from one ear, lay flat on his stomach to listen at the crack between door and floor."</q>
-  <small>-Harry Potter and the Sorcerer's Stone</small>
-</div>
+<li class="quote">
+  <q>{{quote}}</q>
+  <small>-{{source}}</small>
+</li>
