--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -25,20 +25,20 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: .5rem 1rem;
+  padding: .5rem 2rem;
   background: rgba(255, 255, 255, .5);
   position: sticky;
 }
 
 nav a {
   padding-right: 1rem;
-  font-size: 1.3rem;
+  font-size: 1rem;
   text-decoration: none;
   color: black;
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 2.5rem;
   padding-top: .5rem;
   font-family: DeliciousRoman, serif;
 }
@@ -54,7 +54,7 @@ p {
   text-align: right;
   font-family: Tangerine, sans-serif;
   font-size: 2.5rem;
-  padding: 1rem 1.5rem 0 0;
+  padding: 1rem 2.5rem 0 0;
 }
 
 button {
@@ -63,6 +63,7 @@ button {
   width: 15rem;
   color: rgba(255, 255, 255, 0.8);
   border: 3px solid rgba(255, 255, 255, 0.8);
+  outline: none;
   background: rgba(0, 0, 0, 0.5);
   text-transform: uppercase;
   letter-spacing: .4rem;
@@ -73,9 +74,18 @@ button:hover {
   background: rgba(0, 0, 0, 0.7);
 }
 
+button:focus {
+  border: 3px solid rgba(255, 255, 255, 0.8);
+  box-shadow: 0 0 10px white;
+}
+
+.quote-list {
+  margin: 2rem 0 6rem 0;
+}
+
 .quote {
   display: block;
-  margin: 6rem 10% 0 10%;
+  margin: 0 10%;
   padding: 3rem;
   background: rgba(255, 255, 255, .6);
   text-align: left;
@@ -84,18 +94,18 @@ button:hover {
 
 q {
   display: block;
-  margin-bottom: 1rem;
+  margin-bottom: .5rem;
 }
 
-.hidden {
-  display: none;
+.quote small {
+  font-size: 1rem;
 }
 
 footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: .5rem 1rem;
+  padding: .5rem 2rem;
   background: rgba(255, 255, 255, .5);
   position: sticky;
 }
@@ -133,6 +143,16 @@ label {
 textarea, input {
   width: 100%;
   margin-bottom: 1rem;
+}
+
+input, textarea {
+  border: 1px solid #DDDDDD;
+  outline: none;
+}
+
+input:focus, textarea:focus {
+  box-shadow: 0 0 10px white;
+  border: 1px solid white;
 }
 
 textarea, #name {
@@ -191,6 +211,20 @@ textarea {
 }
 
 .stripe-checkout {
-  width: 30rem;
-  margin-top: 0;
+  width: 33.5rem;
+  margin-top: .5rem;
+}
+
+/* Random */
+.random {
+  display: block;
+  margin: 6rem 10% 0 10%;
+  padding: 3rem;
+  background: rgba(255, 255, 255, .6);
+  text-align: left;
+  font-size: 1.5rem;
+}
+
+.hidden {
+  display: none;
 }
