--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,7 +1,8 @@
 <p>a collection of real and fake quotes on the theme of Harry Potter's stomach</p>
 <h2>QUOTES</h2>
-<ul class="quote-list">
+{{!-- <p>{{model}}</p> --}}
+{{!-- <ul class="quote-list">
   {{#each model.quotes as |item|}}
     {{quote-stomach quote=item.quote source=item.source}}
   {{/each}}
-</ul>
+</ul> --}}
