Revert "Setup Ember Data"
This reverts commit 6210232a19b7f6fb9f1c18f074bafc7616d86125.

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,8 +1,7 @@
 <p>a collection of real and fake quotes on the theme of Harry Potter's stomach</p>
 <h2>QUOTES</h2>
-{{!-- <p>{{model}}</p> --}}
-{{!-- <ul class="quote-list">
+<ul class="quote-list">
   {{#each model.quotes as |item|}}
     {{quote-stomach quote=item.quote source=item.source}}
   {{/each}}
-</ul> --}}
+</ul>
