--- a/app/templates/components/random-quote.hbs
+++ b/app/templates/components/random-quote.hbs
@@ -2,6 +2,6 @@
   <button action="submit">generate</button>
 </form>
 <div class="random hidden">
-  <q>"Harry and Dudley promptly had a furious but silent fight over who would listen at the keyhole; Dudley won, so Harry, his glasses dangling from one ear, lay flat on his stomach to listen at the crack between door and floor."</q>
+  <q>"Harry felt as though his insides had turned to ice."</q>
   <small>-Harry Potter and the Sorcerer's Stone</small>
 </div>
