Add ids to quote elements

--- a/app/templates/components/quote-stomach.hbs
+++ b/app/templates/components/quote-stomach.hbs
@@ -1,5 +1,5 @@
 <li class="quote">
-  <q>{{quote}}</q>
+  <q id={{id}}>{{quote}}</q>
   <small>-{{source}}</small>
   {{#unless isReal}}
     <div class="edit">
