--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,6 +2,6 @@
 <h2>QUOTES</h2>
 <ul class="quote-list">
   {{#each model.quotes as |item|}}
-    {{quote-stomach quote=item.quote source=item.source isReal=item.isReal}}
+    {{quote-stomach id=item.id quote=item.quote source=item.source isReal=item.isReal}}
   {{/each}}
 </ul>
