--- a/app/templates/components/header-stomach.hbs
+++ b/app/templates/components/header-stomach.hbs
@@ -1,10 +1,9 @@
 <nav>
   <div>
-    <a href='/'>QUOTES</a>
-    <a href='/random'>RANDOM</a>
-    <a href='/add'>ADD</a>
-    <a href='/favorites'>FAVES</a>
-    <a href='/donate'>DONATE</a>
+    {{#link-to "index"}}QUOTES{{/link-to}}
+    {{#link-to "random"}}RANDOM{{/link-to}}
+    {{#link-to "add"}}ADD{{/link-to}}
+    {{#link-to "donate"}}DONATE{{/link-to}}
   </div>
   <h1>Harry Potter and the Sorcerer's Stomach</h1>
 </nav>
