--- a/app/templates/components/edit-quote.hbs
+++ b/app/templates/components/edit-quote.hbs
@@ -1,5 +1,6 @@
 <h2 class="edit">Edit</h2>
 <form class="edit-quote">
-  <textarea id="quote">{{text}}</textarea>
-  <input id="submit-quote" type="submit" value="SAVE CHANGES">
+  <textarea id={{id}}>{{text}}</textarea>
+  <input id="edit-quote" type="submit" value="SAVE CHANGES">
 </form>
+<p class="edited hidden">Changes saved!</p>
