Style social media links

--- a/app/templates/components/footer-stomach.hbs
+++ b/app/templates/components/footer-stomach.hbs
@@ -1,8 +1,8 @@
 <footer>
   <small>&copy;2018 Amber Johnson</small>
   <div>
-    <a href="https://www.github.com/amberjohnsonsmile">GitHub</a>
-    <a href="https://www.linkedin.com/in/amberjohnsonsmile">LinkedIn</a>
-    <a href="mailto:amberjohnsonsmile@gmail.com">Email</a>
+    <a href="https://www.github.com/amberjohnsonsmile"><img src="./github.png" alt="Github icon" /></a>
+    <a href="https://www.linkedin.com/in/amberjohnsonsmile"><img src="./linkedin.png" alt="Linkedin icon" /></a>
+    <a href="mailto:amberjohnsonsmile@gmail.com"><img src="./email.png" alt="email icon" /></a>
   </div>
 </footer>
