Clear input and add submit message when adding quote

--- a/app/templates/components/add-stomach.hbs
+++ b/app/templates/components/add-stomach.hbs
@@ -6,3 +6,4 @@
   <input type="text" id="name">
   <input id="submit-quote" type="submit" value="SUBMIT">
 </form>
+<p class="submitted hidden">Quote added!</p>
