--- a/app/templates/comment.hbs
+++ b/app/templates/comment.hbs
@@ -1,1 +1,1 @@
-{{quote-stomach class="comment" id=model.quote.id quote=model.quote.quote source=model.quote.source}}
+{{quote-stomach class="comment" id=model.quote.id quote=model.quote.quote source=model.quote.source isReal=model.quote.isReal}}
