--- a/app/templates/comment.hbs
+++ b/app/templates/comment.hbs
@@ -1,1 +1,2 @@
 {{quote-stomach class="comment" id=model.quote.id quote=model.quote.quote source=model.quote.source isReal=model.quote.isReal}}
+{{comments-box class="comments-box"}}
