Display comments with a quote

--- a/app/templates/comment.hbs
+++ b/app/templates/comment.hbs
@@ -1,2 +1,9 @@
-{{quote-stomach class="comment" id=model.quote.id quote=model.quote.quote source=model.quote.source isReal=model.quote.isReal}}
-{{comments-box class="comments-box"}}
+{{quote-stomach class="comment" id=model.quotes.quote.id quote=model.quotes.quote.quote source=model.quotes.quote.source isReal=model.quotes.quote.isReal}}
+<div class="comments-box">
+  <h2>COMMENTS</h2>
+  <ul>
+    {{#each model.comments.quoteComments as |comment|}}
+      {{comments-box comment=comment.comment name=comment.name}}
+    {{/each}}
+  </ul>
+</div>
