--- a/app/templates/components/comments-box.hbs
+++ b/app/templates/components/comments-box.hbs
@@ -1,15 +1,4 @@
-<h2>COMMENTS</h2>
-<ul>
-  <li>
-    <p>I'm a comment! Look at me go.</p>
-    <small>-Amber</small>
-  </li>
-  <li>
-    <p>Another comment? What are you doing??</p>
-    <small>-Anti-comments</small>
-  </li>
-  <li>
-    <p>And what if we were all in different divs?</p>
-    <small>-Divster</small>
-  </li>
-</ul>
+<li>
+  <p>{{comment}}</p>
+  <small>-{{name}}</small>
+</li>
