Remove comment button from comments route

--- a/app/templates/components/quote-stomach.hbs
+++ b/app/templates/components/quote-stomach.hbs
@@ -2,7 +2,9 @@
   <q class={{id}}>{{quote}}</q>
   <small>-{{source}}</small>
   <div class="edit">
-    {{#link-to "comment" (query-params id=id) class="edit"}}COMMENT{{/link-to}}
+    {{#unless comments}}
+      {{#link-to "comment" (query-params id=id) class="edit"}}COMMENT{{/link-to}}
+    {{/unless}}
     {{#unless isReal}}
       {{#link-to "edit" (query-params id=id) class="edit edit-button"}}EDIT{{/link-to}}
       <a href="#" id="delete" class="edit">DELETE</a>
