--- a/app/templates/comment.hbs
+++ b/app/templates/comment.hbs
@@ -1,4 +1,4 @@
-{{quote-stomach class="comment" id=model.quotes.quote.id quote=model.quotes.quote.quote source=model.quotes.quote.source isReal=model.quotes.quote.isReal}}
+{{quote-stomach class="comment" id=model.quotes.quote.id quote=model.quotes.quote.quote source=model.quotes.quote.source isReal=model.quotes.quote.isReal comments=model.comments}}
 {{#if model.comments.quoteComments}}
   <div class="comments-box">
     <h2>COMMENTS</h2>
