--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -137,7 +137,7 @@ footer a {
 
 /* Add page */
 
-.add-quote, .edit-quote {
+.add-quote, .edit-quote, .add-comment {
   color: white;
   display: flex;
   flex-direction: column;
@@ -191,7 +191,7 @@ textarea {
   font-size: 1.5rem;
 }
 
-#submit-quote, #edit-quote {
+#submit-quote, #edit-quote, #submit-comment {
   margin-top: 1rem;
   height: 4rem;
   color: rgba(255, 255, 255, 0.8);
@@ -202,8 +202,12 @@ textarea {
   font-size: 1rem;
 }
 
-#submit-quote:hover, #edit-quote:hover {
+#submit-quote:hover, #edit-quote:hover, #submit-comment:hover {
   background: rgba(0, 0, 0, 0.7);
+}
+
+#submit-comment {
+  margin-bottom: 10rem;
 }
 
 .submitted {
@@ -300,4 +304,12 @@ textarea {
   display: block;
   text-align: left;
   margin: 1rem 0;
+}
+
+.add-comment-component h2 {
+  margin-top: 8rem;
+}
+
+.add-comment-component .submitted {
+  margin: -10rem 0 10rem 0;
 }
