Complete comment delete functionality

--- a/app/templates/components/comments-box.hbs
+++ b/app/templates/components/comments-box.hbs
@@ -6,3 +6,4 @@
     <a href="#" id="delete-comment" class={{comment_id}}>DELETE</a>
   </div>
 </li>
+<p id="deleted" class="hidden">Comment deleted!</p>
