--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -318,3 +318,11 @@ textarea {
   text-align: left;
   margin-top: 2rem;
 }
+
+#deleted {
+  color: rgba(255, 255, 255, 0.8);
+  text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+  font-family: Tangerine, sans-serif;
+  font-size: 2.5rem;
+  text-align: center;
+}
