--- a/app/templates/components/donate-stomach.hbs
+++ b/app/templates/components/donate-stomach.hbs
@@ -8,4 +8,6 @@
 {{stripe-checkout
   name="Harry Potter"
   description="and the Sorcerer's Stomach"
+  onToken=(action "thanks")
 }}
+<p class="thanks hidden">Thanks for your donation of $<p class="amount hidden"></p>!</p>
