Finish Cypress tests

--- a/app/templates/components/donate-stomach.hbs
+++ b/app/templates/components/donate-stomach.hbs
@@ -10,4 +10,4 @@
   description="and the Sorcerer's Stomach"
   onToken=(action "thanks")
 }}
-<p class="thanks hidden">Thanks for your donation of $<p class="amount hidden"></p>!</p>
+<p class="thanks hidden">Thank you for your donation of $<p class="amount hidden"></p>!</p>
